--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <meta http-equiv="refresh" content="3; url = /onboarding">
+  <meta http-equiv="refresh" content="3; url = https://alexandernevsky.github.io/keytom-mobile-prototype-new/onboarding">
 </head>
 <body>
   <div class="keytom-app-wrapper">
